--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
